scrollbar fixes

--- a/src/styles/global.sass
+++ b/src/styles/global.sass
@@ -12,6 +12,9 @@ html
     font-family: 'Montserrat', sans-serif
     font-size: 14px
 
+::-webkit-scrollbar
+    display: none
+
 img
     object-fit: contain
     object-position: center
